--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -128,7 +128,8 @@
 
 @media screen and (max-width: 768px){
     .page{
-        overflow: scroll;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
     
     .top-tags{
